deploy/terraform/internet-gateway.tf
resource "aws_internet_gateway" "internet-gateway" {
  vpc_id = "${aws_vpc.private.id}"

  tags {
    Name = "internet-gateway.${var.region}"
  }
}
